# allomix

./: .gitignore  .pylintrc  CHANGELOG.md  CLAUDE.md  README.md  paper.toml  pyproject.toml
.github/workflows/: pages.yml  tests.yml
claude/: 12_bq_aware_plan.md  12_marker_context_refactor_plan.md  16_gq_weighted_markers_plan.md  17_bq_aware_plan.md  2026-05-29_wider_panel_validation_notes.md  20_host_presence_detection_plan.md  allomix_overall_plan.md  cohort_phase_plan.md  dave_code_review_refactoring.md  email_2026-06-01.md  empirical_error_rates_plan.md  further_improvements.md  html_report_requirements.md  instructions.md  interesting_results.md  issue_13_cnv_loh_plan.md  issue_35_pdf_plan.md  issue_8_lod_markers_plan.md  multi_donor_plan.md  new_results_summary.md  paper_wbc_lineage_mix.md  per_site_dropout_plan.md  public_data_subsample_plan.md  simulation_based_on_real_data.md  srp434573_figure_review_findings.md  srp434573_figure_review_plan.md  step21_per_marker_type_overdispersion.md  step30_design.md
claude/historical/: search_plan.md  step2_bam_vs_vcf_decision.md  step4_reference_tool_analysis.md  step5_implementation_plan.md  tool_survey.md
doc/: architecture.md  cli.md  estimate_bias.md  joint_calling.md  paper.md  reports.md  scripts.md
docs/: architecture.md  cli.md  custom_report_template.md  estimate_bias.md  joint_calling.md  marker_types.md  panel_guide.md  paper.md  reports.md  scripts.md
docs/examples/: srp434573_dilution_series.html  srp434573_single_sample.html  srp434573_single_sample.markers.csv  srp434573_single_sample_1pct.html  srp434573_single_sample_1pct.markers.csv
paper/: Snakefile  abstract.md  acknowledgements.md  discussion.md  introduction.md  methods.md  references.bib  results.md  supplementary.md
paper/empirical_results/: README.md  panel_empirical.csv  panel_per_marker.tsv
paper/public_data/SRP434573/: README.md  SRP434573.bed  SRP434573.midpoints.bed  config.yaml  download_fastqs.sh  ena_runs.tsv  fetch_ena_metadata.sh  (+2 more)
paper/scripts/: build_srp434573_panel_bed.sh  build_tables.py  compare_bias_correction.py  fast_grid_estimator.py  generate_error_table_arms_facts.py  generate_multidonor_figure.py  generate_paper_facts.py  generate_srp434573_facts.py  generate_srp434573_synthetic_facts.py  generate_supp_synthetic.py  generate_timeline_figure.py  make_semisynthetic_srp434573.py  paper_quick.py  plot_cnv_loh.py  plot_lod_curves.py  plot_lod_grid.py  plot_lod_saturation.py  plot_presence_lod_curves.py  plot_srp434573.py  plot_srp434573_timeline.py  plot_srp_contam.py  plot_subsample_lod.py  probe_contam_clean_srp434573.py  probe_contam_mechanism_srp434573.py  probe_contam_median_srp434573.py  probe_index_hopping_srp434573.py  qc_gating_sensitivity.py  run_cnv_loh_validation.py  run_depth_validation.py  run_error_table_arms.sh  run_lod_validation.py  run_multidonor_validation.py  run_overdispersion_lod.py  run_presence_lod.py  run_presence_lod_validation.py  run_relatedness_validation.py  run_srp434573_allomix.py  run_subsample_lod.py  srp434573_common.py  validate_grid_estimator.py
paper/tests/: test_lod_validation.py  test_semisynthetic_srp434573.py
pipeline/: .gitignore  Snakefile  config.yaml  tools.yaml
pipeline/scripts/: extract_run_units.py
scripts/: benchmark_ci_models.py  build_force_output_panel.sh  build_panel_vcf.py  build_srp434573_panel_bed.py  compare_bias_correction.py  diagnose_sample.py  gen_example_report.sh  generate_multidonor_test_data.py  generate_paper_facts.py  generate_test_data.py  generate_timeline_data.py  host_presence_manhattan.py  host_presence_markers_vcf.py  make_midpoint_bed.py  make_semisynthetic_srp434573.py  make_synthetic_genotypes.py  measure_panel_bias.py  mix_bams.sh  plot_chimerism_comparison.py  plot_host_presence.py  plot_host_presence_per_marker.py  plot_informative_karyogram.py  plot_presence_lod_curve.py  plot_srp434573.py  probe_contam_clean_srp434573.py  probe_contam_mechanism_srp434573.py  probe_contam_median_srp434573.py  probe_index_hopping_srp434573.py  qc_bias_samples.py  recover_panel_bed.py  run_csv_batch.py  run_lint.sh  run_srp434573_allomix.py  run_validation.py  run_xls_batch.py  script_utils.py  validate_contamination_lod_floor.py  validate_grid_estimator.py  validate_onesided_trim.py  verify_overdispersion.py
src/allomix/: __init__.py  analysis.py  bias.py  chimerism.py  cli.py  constants.py  contamination.py  contamination_table.py  detect.py  error_rates.py  genotype.py  host_presence.py  likelihood.py  marker_contamination.py  qc.py  relatedness.py  report.py  results.py  runmeta.py  sample_contamination.py  simulate.py
tests/: test_analysis.py  test_bias.py  test_caller.py  test_chimerism.py  test_contamination.py  test_contamination_table.py  test_detect.py  test_error_rates.py  test_extract_run_units.py  test_fast_grid_estimator.py  test_genotype.py  test_host_presence.py  test_html_report.py  test_integration.py  test_lod_validation.py  test_marker_contamination.py  test_multidonor.py  test_panel_qc.py  test_qc.py  test_relatedness.py  test_report.py  test_runmeta.py  test_sample_contamination.py  test_semisynthetic_srp434573.py  test_simulate.py
tests/test_data/: donor.vcf  host.vcf  host_0_donor_100.vcf  host_100_donor_0.vcf  host_10_donor_90.vcf  host_20_donor_80.vcf  host_30_donor_70.vcf  host_40_donor_60.vcf  host_50_donor_50.vcf  host_60_donor_40.vcf  host_70_donor_30.vcf  host_80_donor_20.vcf  host_90_donor_10.vcf  joint_multi_donor.vcf  joint_single_donor.vcf  single_sample_example.vcf  truth_table.tsv
(+154 files in other folders)
