[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "allomix"
version = "0.1.0"
description = "NGS-based donor chimerism monitoring for HSCT"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Dave Lawrence" },
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "cyvcf2>=0.30",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
# User-facing helper scripts (joint-calling prep, QC, diagnosis) run on the
# base runtime deps. Only the plotting/visualisation scripts need matplotlib.
scripts = [
    "matplotlib>=3.7",
]
# snakemake >=8 requires Python 3.11+, so the paper build needs a 3.11 venv
# (`uv venv --python 3.11`) even though the core tool supports 3.10. See README.
paper = [
    "allomix[scripts]",
    "snakemake>=8.0",
    "vibepaper>=0.8.0",  # bundles pandoc (pypandoc-binary) and adds --pdf-if-available
]

[project.scripts]
allomix = "allomix.cli:main"

[project.urls]
Homepage = "https://github.com/SACGF/allomix"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
