[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "allomix"
version = "0.1.0"
description = "NGS-based donor chimerism monitoring for HSCT"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Dave Lawrence" },
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "cyvcf2>=0.30",
    "numpy>=1.24",
    "scipy>=1.10",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "matplotlib>=3.7",  # for the HTML timeline report tests (see the report extra)
]
# The HTML timeline report (allomix timeline --format html) renders its trend
# chart with matplotlib. The single-sample HTML report needs nothing beyond the
# base runtime deps; only the timeline trend chart pulls this in.
report = [
    "matplotlib>=3.7",
]
# User-facing helper scripts (joint-calling prep, QC, diagnosis) run on the
# base runtime deps. Only the plotting/visualisation scripts need matplotlib;
# the karyogram also pulls chromosome lengths per genome build from bioutils.
scripts = [
    "matplotlib>=3.7",
    "bioutils>=0.5",
]
# snakemake >=8 requires Python 3.11+, so the paper build needs a 3.11 venv
# (`uv venv --python 3.11`) even though the core tool supports 3.10. See README.
paper = [
    "allomix[scripts]",
    "snakemake>=8.0",
    "vibepaper>=0.8.0",  # bundles pandoc (pypandoc-binary) and adds --pdf-if-available
]

[project.scripts]
allomix = "allomix.cli:main"

[project.urls]
Homepage = "https://github.com/SACGF/allomix"

[tool.setuptools.packages.find]
where = ["src"]

# Ship the HTML report templates and inlined CSS/JS as package data so the
# Jinja PackageLoader finds them in an installed (non-editable) build.
[tool.setuptools.package-data]
allomix = ["html/templates/*.html", "html/templates/*.css", "html/templates/*.js"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
